--- a/pregg-platform-pj/package.json
+++ b/pregg-platform-pj/package.json
@@ -44,6 +44,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -53,7 +54,8 @@
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "^13.5.1",
+    "next": "^15.2.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "^18.2.0",
@@ -71,6 +73,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "prisma": "^6.5.0"
   }
 }
